@@ -22,6 +22,7 @@ coverage = 3.5.1
 createcoverage = 1.1
 createzopecoverage = 1.5
 decorator = 3.3.1
+fanstatic = 0.11.4
 gocept.cache = 0.5
 gocept.country = 0.6.4
 gocept.pagelet = 0.3
@@ -29,12 +30,10 @@ gocept.reference = 0.9.1
 gocept.selenium = 0.12
 grokcore.component = 2.4
 gtkeggdeps = 0.0.7
-hurry.jquery = 1.4.3.1
-hurry.jqueryui = 1.8.5.1
-hurry.resource = 0.10
-hurry.zoperesource = 0.7
 icemac.ab.locales = 0.9
 icemac.truncatetext = 0.2.1
+js.jquery = 1.7.1
+js.jqueryui = 1.8.16-1
 martian = 0.14
 mock = 0.7.2
 ordereddict = 1.1
@@ -56,7 +55,7 @@ z3c.evalexception = 2.0
 z3c.flashmessage = 1.3
 z3c.form = 2.5.1
 z3c.formui = 2.2.0
-z3c.layer.pagelet = 1.10.0
+z3c.layer.pagelet = 1.10.1
 z3c.locales = 0.3.1
 z3c.macro = 1.4.1
 z3c.menu.ready2go = 0.8.0
@@ -87,7 +86,7 @@ zope.app.tree = 3.6.0
 # ZTK overrides:
 lxml = ${lxml-data:lxml}
 
-WebOb = 1.1.1
+WebOb = 1.2b3
 WebTest = 1.3.3
 mr.developer = 1.18
 zope.app.locales = 3.7.2
